# play24

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  METHODS.md  QUICKSTART.md  README.md  SKILL.md  endpoints.txt  play24.py  play24_json.py  play24_mcp.py  play24_passkey.py  play24lib.py  pyproject.toml
docs/: ACTIVATION.md  API.md  agents-mcp.md  auth.md  cli.md  monitor.md  multi-number.md
examples/: monitor.config.example.json  monitor.py
re/: frida_run.py  unpin.js
